Upgrading query and query mobile. Fixing list page button lag/flicker.

--- a/www/css/main.scss
+++ b/www/css/main.scss
@@ -179,6 +179,7 @@ input[type=number], input[type=date] {
 
 .ui-btn:focus {
     box-shadow: none !important;
+    color: none !important;
 }
 
 .ui-content-no-padding {
